--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>prattle.js</title>
+    <link rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
     <div id="app"/>
